--- a/includes/index.hbs
+++ b/includes/index.hbs
@@ -94,7 +94,7 @@
                                         {{highlight_author authors}}
                                     </div>
                                     <div class="article-summary-box-inner">
-                                        <span>{{summary}}</span>
+                                        <span>{{highlight_summary summary}}</span>
                                     </div>
                                     {{#if comment}}
                                         <div class="article-summary-box-inner">
